--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "unordered_map": "cpp",
     "vector": "cpp",
     "initializer_list": "cpp",
-    "string_view": "cpp"
+    "string_view": "cpp",
+    "string": "cpp"
   }
 }
