--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "vector": "cpp",
     "initializer_list": "cpp",
     "string_view": "cpp",
-    "string": "cpp"
+    "string": "cpp",
+    "ratio": "cpp"
   }
 }
